# DefinEngine

./: .clang-format  .commitlintrc.json  .gitignore  .releaserc.json  CMakeLists.txt  Doxyfile  README.md  package-lock.json  package.json
.cpp-linter_cache/: comments-pg2.json
.github/: CONTRIBUTING.md  pull_request_template.md
.github/workflows/: cmake-multi-platform.yml  commitlint.yml  doxygen.yml  lint.yml  release.yml
cmake/: GitVersion.cmake
engine/: CMakeLists.txt  config.h.in
engine/io/: FileSystem.cpp  FileSystem.h
engine/source/: Application.cpp  Application.h  Engine.cpp  Engine.h  eng.h
engine/source/graphics/: GraphicsAPI.cpp  GraphicsAPI.h  ShaderProgram.cpp  ShaderProgram.h  VertexLayout.h
engine/source/input/: InputManager.cpp  InputManager.h
engine/source/render/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderQueue.cpp  RenderQueue.h
engine/source/scene/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
engine/source/scene/components/: CameraComponent.cpp  CameraComponent.h  MeshComponent.cpp  MeshComponent.h  PlayerControllerComponent.cpp  PlayerControllerComponent.h
source/: Game.cpp  Game.h  TestObject.cpp  TestObject.h  game.cpp  game.h  main.cpp  snake.cpp  version.h.in
